grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:7.4.3
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana
      restartPolicy: Always
      volumes:
        - name: grafana
          hostPath:
            path: /var/k8s/volumes/default/grafana
