grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: grafana
spec:
  rules:
    - host: grafana.nuc
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
